# SNNI-FHE-GC

./: .gitignore  .gitmodules  BenchmarkNN.cpp  CMakeLists.txt  PlainNN.cpp  README.md  SealNN.cpp  TinyNN.cpp
